# search_jobs

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  eslint.config.js  package-lock.json  package.json  start.ps1  tsconfig.json  turbo.json
backend/: .env.example  Dockerfile  alembic.ini  analyze_portals.py  celery_beat_start.py  check_errors.py  check_runs.py  docker-entrypoint.sh  fix_portals.py  pyproject.toml  requirements.txt  run.py  seed_portals.py
backend/alembic/: env.py
backend/alembic/versions/: 20260619_184500_init_all_tables.py  20260620_120000_add_profile_import_fields.py  20260623_190000_add_notification_preferences.py
backend/app/: celery_app.py  celery_beat.py  config.py  database.py  main.py
backend/app/applications/: router.py
backend/app/applicator/: engine.py
backend/app/auth/: redis_client.py  router.py  schemas.py  utils.py
backend/app/cover_letter/: generator.py
backend/app/jobs/: router.py
backend/app/matching/: engine.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  application.py  job.py  (+7 more)
backend/tests/: conftest.py  test_auth.py  test_auth_e2e.py  test_auth_routes.py  test_auth_utils.py  test_config.py  test_cors.py  test_cv_parser.py  test_file_storage.py  test_health.py  test_import_e2e.py  test_import_routes.py  test_linkedin_importer.py  test_merge_service.py  test_notifications.py  test_profile_routes.py  test_profile_scraper.py  test_profiles.py  test_rate_limiting.py  test_scraper.py  test_scraper_reliability.py  test_startup.py
backend/tools/: setup_linkedin_auth.py
(+90 files in other folders)
